--- a/kubernetes/manifests/app/deployment.yaml
+++ b/kubernetes/manifests/app/deployment.yaml
@@ -30,7 +30,7 @@ spec:
             - name: MONGODB_URI
               valueFrom:
                 secretKeyRef:
-                  name: mongo-credentials
+                  name: demo-crm-mongodb-uri
                   key: MONGODB_URI
           envFrom:
             - configMapRef:
