--- a/kubernetes/manifests/app/clusterissuer.yaml
+++ b/kubernetes/manifests/app/clusterissuer.yaml
@@ -4,7 +4,7 @@ metadata:
   name: letsencrypt-prod
 spec:
   acme:
-    email: salihdaher9@gmail.com
+    email: roman.smirnv@gmail.com
     server: https://acme-v02.api.letsencrypt.org/directory
     privateKeySecretRef:
       name: letsencrypt-prod
