--- a/kubernetes/helm/demo-crm/Chart.yaml
+++ b/kubernetes/helm/demo-crm/Chart.yaml
@@ -12,8 +12,7 @@ dependencies:
   - name: cert-manager
     version: ">=0.0.0"
     repository: "https://charts.jetstack.io"
-    alias: certManager
-    condition: certManager.enabled
+    condition: cert-manager.enabled
   - name: nginx-ingress
     version: ">=0.0.0"
     repository: "https://helm.nginx.com/stable"
