feat: Implenet sealed secrets

--- a/kubernetes/helm/demo-crm/templates/secret.yaml
+++ b/kubernetes/helm/demo-crm/templates/secret.yaml
@@ -1,4 +1,21 @@
+{{- $useSealed := .Values.sealedSecrets.enabled -}}
 {{- if .Values.appMongo.uri.create }}
+{{- if $useSealed }}
+apiVersion: bitnami.com/v1alpha1
+kind: SealedSecret
+metadata:
+  name: {{ .Values.appMongo.uri.secretName }}
+  labels:
+    {{- include "demo-crm.labels" . | nindent 4 }}
+spec:
+  encryptedData:
+    {{ .Values.appMongo.uri.key }}: {{ .Values.appMongo.uri.sealedValue | quote }}
+  template:
+    metadata:
+      labels:
+        {{- include "demo-crm.labels" . | nindent 8 }}
+    type: Opaque
+{{- else }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -8,4 +25,34 @@ metadata:
 type: Opaque
 stringData:
   {{ .Values.appMongo.uri.key }}: {{ .Values.appMongo.uri.value | quote }}
+{{- end }}
+{{- end }}
+{{- if .Values.mongodbAuth.create }}
+---
+{{- if $useSealed }}
+apiVersion: bitnami.com/v1alpha1
+kind: SealedSecret
+metadata:
+  name: {{ .Values.mongodbAuth.secretName }}
+  labels:
+    {{- include "demo-crm.labels" . | nindent 4 }}
+spec:
+  encryptedData:
+    {{- toYaml .Values.mongodbAuth.sealedData | nindent 4 }}
+  template:
+    metadata:
+      labels:
+        {{- include "demo-crm.labels" . | nindent 8 }}
+    type: Opaque
+{{- else }}
+apiVersion: v1
+kind: Secret
+metadata:
+  name: {{ .Values.mongodbAuth.secretName }}
+  labels:
+    {{- include "demo-crm.labels" . | nindent 4 }}
+type: Opaque
+stringData:
+  {{- toYaml .Values.mongodbAuth.data | nindent 2 }}
+{{- end }}
 {{- end }}
