--- a/kubernetes/helm/demo-crm/Chart.yaml
+++ b/kubernetes/helm/demo-crm/Chart.yaml
@@ -13,6 +13,11 @@ dependencies:
     version: ">=0.0.0"
     repository: "https://charts.jetstack.io"
     condition: cert-manager.enabled
+  - name: sealed-secrets
+    version: ">=0.0.0"
+    repository: "https://bitnami-labs.github.io/sealed-secrets"
+    alias: sealedSecrets
+    condition: sealedSecrets.enabled
   - name: nginx-ingress
     version: ">=0.0.0"
     repository: "https://helm.nginx.com/stable"
